[package]
name = "gerrit-archiver"
version = "0.0.1"
authors = [ "Dolph Mathews <dolph.mathews@gmail.com>" ]
description = "Archive gerrit code reviews for later analysis."
license = "Apache-2.0/MIT"
repository = "https://github.com/dolph/gerrit-archiver"
documentation = "https://github.com/dolph/gerrit-archiver"

[dependencies]
argparse = "*"
env_logger = "*"
log = "*"
users = "*"
