[package]
name = "gerrit-query"
version = "0.0.1"
authors = [ "Dolph Mathews <dolph.mathews@gmail.com>" ]
description = "Command line interface to execute Gerrit queries."
license = "Apache-2.0/MIT"
repository = "https://github.com/dolph/gerrit-query"
documentation = "https://github.com/dolph/gerrit-query"

[dependencies]
argparse = "*"
env_logger = "*"
log = "*"
users = "*"
